--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "typescript-todo",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "scripts": {
-    "clean": "rm dist/bundle.js",
-    "start": "parcel src/index.html",
-    "build-prod": "parcel build src/index.html",
-    "test": "jest"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-react": "^7.22.15",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13",
-    "autoprefixer": "^10.4.16",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "parcel-bundler": "^1.12.5",
-    "postcss-modules": "^6.0.0",
-    "typescript": "^5.2.2"
-  }
+    "name": "typescript-todo",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "scripts": {
+        "clean": "rm dist/bundle.js",
+        "start": "parcel src/index.html --open",
+        "build-prod": "parcel build src/index.html",
+        "test": "jest"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.23.2",
+        "@babel/preset-env": "^7.23.2",
+        "@babel/preset-react": "^7.22.15",
+        "@types/react": "^18.2.28",
+        "@types/react-dom": "^18.2.13",
+        "autoprefixer": "^10.4.16",
+        "babel-jest": "^29.7.0",
+        "jest": "^29.7.0",
+        "parcel-bundler": "^1.12.5",
+        "postcss-modules": "^6.0.0",
+        "typescript": "^5.2.2"
+    }
 }
