--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
         "test": "jest"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.7",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.1.3",
+        "store": "^2.0.12"
     },
     "devDependencies": {
         "@babel/core": "^7.23.2",
