--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "baseUrl": "./src"
     },
     "include": ["./src/**/*"],
     "exclude": ["node_modules"]
